@@ -1,6 +1,7 @@
 package com.fishtripplanner.dto.reservation;
 
 import com.fishtripplanner.domain.reservation.ReservationPost;
+import com.fishtripplanner.domain.reservation.ReservationType;
 import com.fishtripplanner.entity.FishTypeEntity;
 import com.fishtripplanner.entity.RegionEntity;
 import lombok.AllArgsConstructor;
@@ -20,66 +21,34 @@ public class ReservationCardDto {
     private String content;
     private String companyName;
     private String imageUrl;
-    private String region;  // 여러 지역 문자열로 표시
+    private String region;             // ✅ 여러 지역 문자열로 표시 (ex: (서울)강남구 송파구, (경기)수원시)
     private List<String> fishTypes;
+    private String typeKorean;         // ✅ 한글 예약 타입명 (예: 선상, 갯바위, 민박 등)
 
+    /**
+     * ReservationPost → ReservationCardDto 변환 로직
+     */
     public static ReservationCardDto from(ReservationPost post) {
+        // ✅ 지역 문자열 처리
         String regionText = "미지정";
-
         List<RegionEntity> regions = post.getRegions();
         if (regions != null && !regions.isEmpty()) {
-            // 부모 이름 -> 자식 목록 매핑
-            Map<String, List<RegionEntity>> groupedByParent = new LinkedHashMap<>();
-
+            Map<String, List<String>> grouped = new LinkedHashMap<>();
             for (RegionEntity region : regions) {
-                String parentName;
-                RegionEntity parent;
-
-                if (region.getParent() != null) {
-                    parent = region.getParent();
-                    parentName = parent.getName();
-                } else {
-                    parent = region;
-                    parentName = region.getName();
-                }
-
-                groupedByParent.computeIfAbsent(parentName, k -> new ArrayList<>()).add(region);
+                String parentName = region.getParent() != null ? region.getParent().getName() : "기타";
+                String childName = region.getName();
+                grouped.computeIfAbsent(parentName, k -> new ArrayList<>()).add(childName);
             }
-
-            List<String> displayStrings = new ArrayList<>();
-
-            for (Map.Entry<String, List<RegionEntity>> entry : groupedByParent.entrySet()) {
-                String parentName = entry.getKey();
-                List<RegionEntity> selected = entry.getValue();
-
-                RegionEntity sampleRegion = selected.get(0).getParent() != null
-                        ? selected.get(0).getParent()
-                        : selected.get(0);
-
-                List<RegionEntity> allChildren = sampleRegion.getChildren();
-                Set<Long> selectedIds = selected.stream().map(RegionEntity::getId).collect(Collectors.toSet());
-
-                boolean isAllChildrenSelected = allChildren != null && !allChildren.isEmpty() &&
-                        allChildren.stream().map(RegionEntity::getId).allMatch(selectedIds::contains);
-
-                if (isAllChildrenSelected) {
-                    displayStrings.add("(" + parentName + ") 전체");
-                } else {
-                    displayStrings.addAll(
-                            selected.stream()
-                                    .filter(r -> r.getParent() != null) // 자식만
-                                    .map(r -> "(" + parentName + ")" + r.getName())  // 여기 공백 제거
-                                    .toList()
-                    );
-                }
-            }
-
-            regionText = String.join(", ", displayStrings);
+            List<String> formatted = grouped.entrySet().stream()
+                    .map(entry -> "(" + entry.getKey() + ")" + String.join(" ", entry.getValue()))
+                    .collect(Collectors.toList());
+            regionText = String.join(", ", formatted);
         }
 
-        // 이미지 처리
+        // ✅ 이미지 경로 보정
         String imageUrl = post.getImageUrl();
         if (imageUrl == null || imageUrl.isBlank()) {
+            // 타입별 기본 이미지
             switch (post.getType()) {
                 case BOAT -> imageUrl = "/images/boat.jpg";
                 case FLOAT -> imageUrl = "/images/float.png";
@@ -92,16 +61,23 @@ public class ReservationCardDto {
             imageUrl = "/uploads/reservation_images/" + imageUrl;
         }
 
+        // ✅ 한글 예약 타입명 가져오기
+        ReservationType type = post.getType();
+        String typeKorean = type != null ? type.getKorean() : "기타";
+
+        // ✅ DTO 생성 및 반환
         return new ReservationCardDto(
                 post.getId(),
                 post.getTitle(),
                 post.getContent(),
                 post.getCompanyName(),
                 imageUrl,
-                regionText, // 🔁 지역 문자열 먼저
+                regionText,
                 post.getFishTypes().stream()
                         .map(FishTypeEntity::getName)
-                        .collect(Collectors.toList())
+                        .collect(Collectors.toList()),
+                typeKorean
         );
     }
+
 }
